App: 修复应用构建和应用加载的相关 bug